<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="16dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/homeLlContainerStartTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_set_time"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/homeTiStartTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:clickable="true"
            android:focusable="true"
            android:enabled="true"
            android:hint="@string/label_start_time"
            app:errorEnabled="true"
            app:endIconDrawable="@drawable/icon_time"
            app:endIconMode="custom"
            app:startIconDrawable="@drawable/icon_sun">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/homeEtStartTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:maxLength="5"
                android:focusable="false"
                android:clickable="true"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/homeTiEndTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:clickable="true"
            android:focusable="true"
            android:enabled="true"
            android:hint="@string/label_end_time"
            app:endIconDrawable="@drawable/icon_time"
            app:endIconMode="custom"
            app:startIconDrawable="@drawable/icon_moon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/homeEtEndTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:maxLength="5"
                android:focusable="false"
                android:clickable="true"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/homeBtnCancelAll"
                style="@style/Widget.Material3.Button.TextButton.Icon"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/label_cancel_all"
                android:textSize="16sp"
                app:elevation="4dp"
                app:icon="@drawable/icon_close"
                app:iconGravity="textStart" />

            <Space
                android:layout_width="16dp"
                android:layout_height="match_parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/homeBtnApply"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/label_apply"
                android:textSize="16sp"
                app:elevation="4dp"
                app:icon="@drawable/icon_done"
                app:iconGravity="textStart" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/homeTvNextAlarmAt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_alarm_at"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/homeLlContainerStartTime"
        app:layout_constraintBottom_toBottomOf="@+id/homeTvAbout"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/homeTvAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:paddingHorizontal="16dp"
        android:text="@string/label_about_underline"
        android:textColor="@color/grey_0002"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>